@@ -1,3 +1,8 @@
+2025-08-02  Zhengyi Fu  <i@fuzy.me>
+
+	* init.el (+custom-faces): Set foreground of region and
+	secondary-selection to unspecified.
+
 2025-08-01  Zhengyi Fu  <i@fuzy.me>
 
 	* init.el (consult-eglot-symbols): Hack highlight for
